--- a/04_Preparation_Draft.ipynb
+++ b/04_Preparation_Draft.ipynb
@@ -3780,7 +3780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "id": "30df2b85-5350-4712-b1e0-9a4b0d9c5b2a",
    "metadata": {
     "tags": []
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "id": "33b978c4-614d-48a2-bd8f-e279d7c3a1a3",
    "metadata": {
     "tags": []
@@ -4015,7 +4015,7 @@
        "24 2018-10-09 09:00:00+00:00                     52"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4038,7 +4038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "id": "dd6c6ace-60e0-40cc-b34e-2594ffe201ce",
    "metadata": {
     "tags": []
@@ -4054,8 +4054,6 @@
     "    \n",
     "    return df\n",
     "\n",
-    "#Use the function for both DataFrames, respectively\n",
-    "\n",
     "timeseries_private = add_missing_hours(timeseries_private)\n",
     "timeseries_private['numberOfUsers_private'] = timeseries_private['numberOfUsers_private'].astype(int)\n",
     "\n",
@@ -4064,12 +4062,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c110dd74-dea1-4d01-b177-c2d71250771a",
+   "metadata": {},
+   "source": [
+    "To provide additional context for our prediction, we now want to include a separate column that indicates if the hour is a weekday or not. \n",
+    "Again, we use a function to change this for both DataFrames."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "03ad3938-933d-4188-aaee-1f0455f07b99",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 81,
+   "id": "92c02784-c98c-48e8-857d-a57c912a939c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_weekday_column(df):\n",
+    "    df['isWeekday'] = df['Hour'].dt.weekday < 5\n",
+    "    return df\n",
+    "\n",
+    "timeseries_private = add_weekday_column(timeseries_private)\n",
+    "timeseries_public = add_weekday_column(timeseries_public)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "633bd36f-720b-4c2d-b38e-35fd5dbbe917",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4094,199 +4114,115 @@
        "      <th></th>\n",
        "      <th>Hour</th>\n",
        "      <th>numberOfUsers_private</th>\n",
+       "      <th>isWeekday</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-10-08 05:00:00+00:00</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018-10-08 06:00:00+00:00</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018-10-08 07:00:00+00:00</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2018-10-08 08:00:00+00:00</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2018-10-08 09:00:00+00:00</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2018-10-08 10:00:00+00:00</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2018-10-08 11:00:00+00:00</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2018-10-08 12:00:00+00:00</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2018-10-08 13:00:00+00:00</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2018-10-08 14:00:00+00:00</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2018-10-08 15:00:00+00:00</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2018-10-08 16:00:00+00:00</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2018-10-08 17:00:00+00:00</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2018-10-08 18:00:00+00:00</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2018-10-08 19:00:00+00:00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2018-10-08 20:00:00+00:00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2018-10-08 21:00:00+00:00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2018-10-08 22:00:00+00:00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2018-10-08 23:00:00+00:00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2018-10-09 00:00:00+00:00</td>\n",
+       "      <th>115</th>\n",
+       "      <td>2018-10-13 00:00:00+00:00</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2018-10-09 01:00:00+00:00</td>\n",
+       "      <th>116</th>\n",
+       "      <td>2018-10-13 01:00:00+00:00</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2018-10-09 02:00:00+00:00</td>\n",
+       "      <th>117</th>\n",
+       "      <td>2018-10-13 02:00:00+00:00</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2018-10-09 03:00:00+00:00</td>\n",
+       "      <th>118</th>\n",
+       "      <td>2018-10-13 03:00:00+00:00</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2018-10-09 04:00:00+00:00</td>\n",
-       "      <td>4</td>\n",
+       "      <th>119</th>\n",
+       "      <td>2018-10-13 04:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2018-10-09 05:00:00+00:00</td>\n",
-       "      <td>20</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25694</th>\n",
+       "      <td>2021-09-12 19:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25695</th>\n",
+       "      <td>2021-09-12 20:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25696</th>\n",
+       "      <td>2021-09-12 21:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25697</th>\n",
+       "      <td>2021-09-12 22:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25698</th>\n",
+       "      <td>2021-09-12 23:00:00+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>7344 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Hour  numberOfUsers_private\n",
-       "0  2018-10-08 05:00:00+00:00                      4\n",
-       "1  2018-10-08 06:00:00+00:00                     19\n",
-       "2  2018-10-08 07:00:00+00:00                     19\n",
-       "3  2018-10-08 08:00:00+00:00                     19\n",
-       "4  2018-10-08 09:00:00+00:00                     19\n",
-       "5  2018-10-08 10:00:00+00:00                     22\n",
-       "6  2018-10-08 11:00:00+00:00                     24\n",
-       "7  2018-10-08 12:00:00+00:00                     26\n",
-       "8  2018-10-08 13:00:00+00:00                     26\n",
-       "9  2018-10-08 14:00:00+00:00                     30\n",
-       "10 2018-10-08 15:00:00+00:00                     34\n",
-       "11 2018-10-08 16:00:00+00:00                     25\n",
-       "12 2018-10-08 17:00:00+00:00                      4\n",
-       "13 2018-10-08 18:00:00+00:00                      3\n",
-       "14 2018-10-08 19:00:00+00:00                      1\n",
-       "15 2018-10-08 20:00:00+00:00                      1\n",
-       "16 2018-10-08 21:00:00+00:00                      1\n",
-       "17 2018-10-08 22:00:00+00:00                      1\n",
-       "18 2018-10-08 23:00:00+00:00                      1\n",
-       "19 2018-10-09 00:00:00+00:00                      0\n",
-       "20 2018-10-09 01:00:00+00:00                      0\n",
-       "21 2018-10-09 02:00:00+00:00                      0\n",
-       "22 2018-10-09 03:00:00+00:00                      0\n",
-       "23 2018-10-09 04:00:00+00:00                      4\n",
-       "24 2018-10-09 05:00:00+00:00                     20"
+       "                           Hour  numberOfUsers_private  isWeekday\n",
+       "115   2018-10-13 00:00:00+00:00                      0      False\n",
+       "116   2018-10-13 01:00:00+00:00                      0      False\n",
+       "117   2018-10-13 02:00:00+00:00                      0      False\n",
+       "118   2018-10-13 03:00:00+00:00                      0      False\n",
+       "119   2018-10-13 04:00:00+00:00                      0      False\n",
+       "...                         ...                    ...        ...\n",
+       "25694 2021-09-12 19:00:00+00:00                      0      False\n",
+       "25695 2021-09-12 20:00:00+00:00                      0      False\n",
+       "25696 2021-09-12 21:00:00+00:00                      0      False\n",
+       "25697 2021-09-12 22:00:00+00:00                      0      False\n",
+       "25698 2021-09-12 23:00:00+00:00                      0      False\n",
+       "\n",
+       "[7344 rows x 3 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "timeseries_private.head(25)"
+    "timeseries_public.head(200)\n",
+    "timeseries_private[timeseries_private['isWeekday'] == False]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b373e7d-37b3-44b8-bdce-774a90cc2021",
+   "cell_type": "markdown",
+   "id": "fc9d4e8c-aa2e-4329-b4a5-23e8c6801e1a",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92c02784-c98c-48e8-857d-a57c912a939c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "633bd36f-720b-4c2d-b38e-35fd5dbbe917",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The result proves that for example the 13th October 2018 was correctly labeled as no weekday since it was a Saturday. The new column works."
+   ]
   },
   {
    "cell_type": "code",
