--- a/04_Utilization_Prediction.ipynb
+++ b/04_Utilization_Prediction.ipynb
@@ -4233,7 +4233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b9ac614d-a7d4-4322-98b8-ec9ab019bedc",
    "metadata": {},
    "outputs": [],
@@ -4253,7 +4253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6d0cb0ca-0c4a-454d-86ec-7264961fba65",
    "metadata": {},
    "outputs": [],
@@ -4264,7 +4264,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "12fc4d55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function tensorflow.python.ops.losses.losses_impl.sparse_softmax_cross_entropy(labels, logits, weights=1.0, scope=None, loss_collection='losses', reduction='weighted_sum_by_nonzero_weights')>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.compat.v1.losses.sparse_softmax_cross_entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3891b75f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(10, activation='relu', input_shape=(784,)),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# ... (rest of your model definition and training)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "8f0291dd-f501-4de8-ab22-68c3c32c03ef",
    "metadata": {},
    "outputs": [],
@@ -4276,14 +4314,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1e61a699-0c35-4d56-84f1-caf147dbc8b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'diamonds' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Define Inputs and Outputs\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43mdiamonds\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdayOfWeek\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHour\u001b[39m\u001b[38;5;124m'\u001b[39m ]\n\u001b[0;32m      4\u001b[0m y \u001b[38;5;241m=\u001b[39m diamonds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprice\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'diamonds' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Define Inputs and Outputs\n",
     "\n",
-    "X = diamonds['dayOfWeek','Hour ]\n",
+    "X = diamonds['dayOfWeek','Hour' ]\n",
     "y = diamonds[\"price\"]"
    ]
   }
@@ -4304,7 +4354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
